--- a/templates/index.html
+++ b/templates/index.html
@@ -7,6 +7,5 @@
 {% endblock %}
 
 {% block footer %}
-    <p><a href="http://github.com/smoqadam/PyFladesk">github</a></p>
-    <p><a href="{{ url_for('page2') }}">Page 2</a></p>
+    <p><a href="{{ url_for('subpage') }}">Underside</a></p>
 {% endblock %}
