--- a/templates/subpage.html
+++ b/templates/subpage.html
@@ -2,10 +2,10 @@
 
 {% block content %}
     <div class="col-lg-12">
-        <h1 > Page2! </h1>
+        <h1>Underside</h1>
     </div>
 {% endblock %}
 
 {% block footer %}
-    <p><a href="{{ url_for('index') }}">Index</a></p>
+    <p><a href="{{ url_for('index') }}">Til hovedsiden</a></p>
 {% endblock %}
